[gd_scene load_steps=10 format=3 uid="uid://dv0510wjionak"]

[ext_resource type="Script" path="res://Scripts/spawner.gd" id="1_ehjat"]
[ext_resource type="PackedScene" uid="uid://cj3qf4rpr17pm" path="res://Prefabs/Characters/civilian_light.tscn" id="2_2wsek"]
[ext_resource type="PackedScene" uid="uid://kcl3hrttj06k" path="res://Prefabs/Characters/knight.tscn" id="3_g2egg"]
[ext_resource type="PackedScene" uid="uid://b6jkyhurdoie0" path="res://Prefabs/Characters/paladin.tscn" id="4_2xjtl"]
[ext_resource type="Script" path="res://Scripts/detectable.gd" id="4_280il"]

[sub_resource type="BoxShape3D" id="BoxShape3D_2nx6i"]
size = Vector3(10.4554, 4.53307, 7.6971)

[sub_resource type="BoxMesh" id="BoxMesh_c4wuw"]

[sub_resource type="BoxShape3D" id="BoxShape3D_wm6mk"]
size = Vector3(10.3269, 4.63971, 7.68932)

[sub_resource type="BoxMesh" id="BoxMesh_rdq8v"]

[node name="Mansion" type="StaticBody3D" groups=["Building", "Enemy", "spawner"]]
script = ExtResource("1_ehjat")
max_civilians = 4
max_knights = 2
civilian_prefab = ExtResource("2_2wsek")
knight_prefab = ExtResource("3_g2egg")
paladin_prefab = ExtResource("4_2xjtl")
spawn_direction = Vector3(2, 0, 0)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="SpawnPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.75763, 0, -0.517924)

[node name="AfterSpawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ReadySpawnPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.38638, 0.5, 6.239)

[node name="BuildingCollision" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_2nx6i")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(10.1844, 0, 0, 0, 4.49626, 0, 0, 0, 7.68652, 0, 0, 0)
mesh = SubResource("BoxMesh_c4wuw")

[node name="DetectionArea3D" type="Area3D" parent="." node_paths=PackedStringArray("mob") groups=["Enemy"]]
script = ExtResource("4_280il")
mob = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0634441, 0)
shape = SubResource("BoxShape3D_wm6mk")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(2.90475, 0, 0, 0, 1, 0, 0, 0, 6.36994, -2.80773, 2.5939, 0)
mesh = SubResource("BoxMesh_rdq8v")

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="AfterSpawnTimer" to="." method="_on_after_spawn_timer_timeout"]
